--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width = device-width, initial-scale=1.0"/>
         <title>
-            ecormercce site
+            ecormerce site
         </title>
         <link rel="stylesheet" href="styles.css" media="all"/>
     </head>
