fully implemented cart functionality

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
       <script src="https://www.paypal.com/sdk/js?client-id=YOUR_CLIENT_ID&currency=INR"></script>
 
     -->
-    <script src="https://www.paypal.com/sdk/js?client-id=AXmLq1EemtB6AA1kfmc4yCKBtpnwly8EF_FFGnEofI0FvUUJMSkBompe1KXfn5QwWulteR_gSPRjiiRZ&currency=NGN"></script>
+    <!-- <script src="https://www.paypal.com/sdk/js?client-id=AR17KhV11CbUMNQ4zUxehpSvnsoTA1hZCDXUXTGAWtLGoDngRsARH2zTsM1z6DKCyzfoFTlgPp-SQRgd&currency=NGN"></script> -->
     <title>quick buy</title>
   </head>
   <body>
